test/frontend/fail/unknown_array_size.osl
int bar() { return 42; }
shader foo() {
    int x[bar()];
}
